--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,31 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# ===== Node modules =====
+node_modules/
+server/node_modules/
+client/node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
+# ===== Environment variables =====
+.env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+server/.env
+client/.env
 
+# ===== Builds =====
+client/build/
+server/dist/
+
+# ===== Logs =====
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
+# ===== Editor =====
+.vscode/
+.idea/
 
-.env
+# ===== OS =====
+.DS_Store
+Thumbs.db
+
+# ===== Coverage =====
+coverage/
