--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "cau-server",
+  "name": "backend",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
@@ -9,8 +8,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "mongoose": "^8.19.3",
-    "socket.io": "^4.8.1"
-  }
-}
+    "express": "^5.2.1",
+    "mongoose": "^9.0.1"
+  }}
